tests/ui/error-codes/E0076.stderr
error[E0076]: SIMD vector's only field must be an array
  --> $DIR/E0076.rs:4:1
   |
LL | struct Bad(u32);
   | ^^^^^^^^^^ --- not an array

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0076`.
